--- a/client/client3.html
+++ b/client/client3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Simple Video Stream</title>
+    <title>Simple Video Stream 2</title>
     <style>
         html, body {
             height: 100%;
